# socket-wrapper

./: .gitignore  CMakeLists.txt  README.md
include/: macros.h  message.h  tcpclient.h  tcpserver.h  tcpsocket.h  utils.h
src/: message.cpp  tcpclient.cpp  tcpserver.cpp  tcpsocket.cpp  utils.cpp
test/: main.cpp
